# snake-sdl

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  README.md  build-windows.bat  build.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  release.yml
include/: app.h  apple.h  bot.h  botlib.h  death_fx.h  events.h  fps.h  render.h  snake.h  snake_draw.h
launcher/: README.md  botlib.py  main.py  readme.txt  requirements.txt
ports/sdl3/: portfile.cmake
src/: app.c  app.cpp  bot.c  botlib.c  death_fx.c  events.c  fps.c  main.c  main.cpp  render.c  snake_draw.c
